# ASHA

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  conftest.py  coverage_report.json  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.cursor/plans/: publish_privysha_pypi_d2a42084.plan.md
.github/workflows/: ci.yml  docs.yml  publish-testpypi.yml  publish.yml
.venv-ci-clean/: pyvenv.cfg
.venv-ci-clean/Scripts/: activate  activate.bat
anchor/: index.html
api-reference/: index.html
architecture/: index.html
benchmarks/: index.html  results.md  run_benchmarks.py  sample_prompts.json
benchmarks/baseline/: benchmark_20260523_193108.json  benchmark_20260524_154048.json  results.json  summary.md
compliance/: index.html
contributing/: index.html
core-concepts/: index.html
debugging/: index.html
deprecations/: index.html
developer-preview/: index.html
docs/: anchor.md  api-reference.md  architecture.md  benchmarks.md  compliance.md  contributing.md  core-concepts.md  debugging.md  deprecations.md  developer-preview.md  examples.md  faq.md  getting-started.md  index.md  integrations.md  local-advisor.md  migration-v0.4.md  migration.md  model-gateway.md  optimization.md  performance-tuning.md  phase1_implementation.md  pipeline.md  prompt-ir.md  publishing.md  quickstart.md  roadmap.md  routing.md  security.md  troubleshooting.md  versioning.md
examples/: README.md  adapter_usage.py  anchor_telemetry.jsonl  basic_usage.py  developer_preview_demo.py  dropin_examples.py  fastapi_integration.py  fastapi_integration_example.py  index.html  instructor_guardrails_example.py  integration_showcase.py  oh_shock_moments.py  provider_testing.py  test_anchor.py  test_crewai_anchor.py  v2_examples.py
faq/: index.html
getting-started/: index.html
integrations/: index.html
local-advisor/: index.html
migration/: index.html
migration-v0.4/: index.html
model-gateway/: index.html
optimization/: index.html
performance-tuning/: index.html
pipeline/: index.html
prompt-ir/: index.html
publishing/: index.html
quickstart/: index.html
roadmap/: index.html
routing/: index.html
search/: search_index.json
security/: index.html
src/asha/: __init__.py  exceptions.py
src/asha/cli/: __init__.py  benchmark_cli.py  main.py  recommend_cli.py
src/asha/compat/: __init__.py  warnings.py
src/asha/core/: __init__.py  benchmark.py  engines.py  format_lock.py  hybrid_pii.py  metrics_dashboard.py  ml_utils.py  output_guard.py  policy_config.py  policy_gate.py  safety.py  safety_classifier.py  safety_constraints.py  schema_validation.py  streaming.py  trace_context.py
src/asha/integrations/: auto_patch.py  composition_strategy.py  framework_adapters.py  llm_wrap.py  otel.py
src/asha/runtime/: __init__.py  agent.py  agent_tools.py  observability.py  processor.py  profiles.py  resolve.py
src/asha/types/: __init__.py  results.py
src/asha/utils/: __init__.py  dropin.py  dropin_helpers.py
src/privysha/: __init__.py  agent.py  exceptions.py
src/privysha/adapters/: __init__.py  claude_adapter.py  factory.py  gemini_adapter.py  grok_adapter.py  hf_adapter.py  mock_adapter.py  model_adapter.py  ollama_adapter.py  openai_adapter.py  universal_adapter.py
src/privysha/cli/: __init__.py  benchmark_cli.py  main.py  recommend_cli.py
src/privysha/compat/: legacy_results.py  warnings.py
src/privysha/compiler/: __init__.py  optimizer_engine.py  prompt_compiler.py
src/privysha/core/: __init__.py  async_pipeline.py  benchmark.py  config.py  debug_trace.py  diff_engine.py  engines.py  explainability.py  format_lock.py  hybrid_pii.py  latency_budget.py  metrics_dashboard.py  ml_utils.py  modes.py  output_guard.py  policy_config.py  policy_resolution.py  risk_analyzer.py  safety.py  safety_classifier.py  schema_validation.py  (+4 more)
tests/: comprehensive_test.py  test_adapter_factory.py  test_adapters_mock.py  test_agent_helpers.py  test_api_edge_matrix.py  test_async_optimize_sanitize.py  test_async_streaming.py  test_auto_patch.py  test_auto_patch_coverage.py  test_cli_smoke.py  test_django_integration.py  test_edge_cases.py  test_fail_closed.py  test_fastapi_integration.py  test_framework_smoke.py  test_hybrid_pii.py  test_instructor_integration.py  test_integration.py  test_langchain_integration.py  test_llamaindex_integration.py  test_local_advisor.py  test_logging_security.py  test_masking_collision.py  test_masking_vault.py  test_metrics_integration.py  test_optimize.py  test_otel.py  test_p0_fixes.py  test_performance.py  test_performance_scalability.py  test_pii_credit_address.py  test_pii_false_positives.py  test_pii_phone.py  test_pii_pipeline.py  test_pii_scoring.py  test_pii_secrets.py  test_pipeline_v2.py  test_policy_modes.py  test_process_coverage.py  test_prompt_preservation.py  (+8 more)
tests/architecture/: test_boundaries.py
tests/contracts/: test_optimize_contract.py
tests/imports/: test_import_graph.py
tests/public_api/: test_root_exports.py
tests_v2/: test_adapters_mock.py  test_agent_helpers.py  test_api_edge_matrix.py  test_async_optimize_sanitize.py  test_async_streaming.py  test_auto_patch.py  test_auto_patch_coverage.py  test_backward_compat.py  test_cli_smoke.py  test_config.py  test_django_integration.py  test_dropin_v2.py  test_edge_cases.py  test_fail_closed.py  test_framework_smoke.py  test_guardrails_integration.py  test_hybrid_pii.py  test_instructor_integration.py  test_langchain_integration.py  test_llamaindex_integration.py  test_local_advisor.py  test_logging_security.py  test_masking_collision.py  test_masking_vault.py  test_metrics_integration.py  test_optimize.py  test_otel.py  test_p0_fixes.py  test_performance.py  test_performance_scalability.py  test_pii_credit_address.py  test_pii_false_positives.py  test_pii_phone.py  test_pii_pipeline.py  test_pii_secrets.py  test_pipeline_v2.py  test_policy_modes.py  test_process_coverage.py  test_prompt_preservation.py  test_reversible_masking.py  (+5 more)
troubleshooting/: index.html
versioning/: index.html
(+209 files in other folders)
