# Copyright 2026 Ajay Rajan
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "privysha"
version = "0.3.0"
description = "Drop-in security + optimization layer for LLM apps (developer preview)"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Ajay Rajan A", email = "ajayrajan727@gmail.com"}
]
maintainers = [
    {name = "Ajay Rajan A", email = "ajayrajan727@gmail.com"}
]
keywords = [
    "llm",
    "security",
    "optimization",
    "privacy",
    "pii-detection",
    "openai",
    "anthropic",
    "gemini",
    "prompt-engineering"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Text Processing",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content"
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "tiktoken>=0.5.0,<2.0.0",
    "requests>=2.28.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "click>=8.0.0,<9.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<10.0.0",
    "pytest-cov>=4.0.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<2.0.0",
    "black>=22.0.0,<26.0.0",
    "flake8>=5.0.0,<8.0.0",
    "mypy>=1.0.0,<2.0.0"
]
docs = [
    "mkdocs>=1.4.0,<3.0.0",
    "mkdocs-material>=8.5.0,<10.0.0",
    "mkdocstrings[python]>=0.19.0,<1.0.0"
]
openai = [
    "openai>=1.0.0,<3.0.0"
]
anthropic = [
    "anthropic>=0.5.0,<1.0.0"
]
gemini = [
    "google-generativeai>=0.3.0,<1.0.0"
]
transformers = [
    "transformers>=4.20.0,<5.0.0",
    "torch>=1.12.0,<3.0.0",
    "accelerate>=0.20.0,<2.0.0"
]
ml = [
    "spacy>=3.4.0,<4.0.0",
    "transformers>=4.20.0,<5.0.0",
    "torch>=1.12.0,<3.0.0",
    "accelerate>=0.20.0,<2.0.0"
]
fastapi = [
    "fastapi>=0.100.0,<1.0.0",
    "starlette>=0.27.0,<1.0.0",
    "uvicorn>=0.23.0,<1.0.0",
]
flask = [
    "flask>=2.0.0,<4.0.0",
]
django = [
    "django>=4.0.0,<6.0.0",
]
langchain = [
    "langchain-core>=0.1.0,<2.0.0",
    "langchain-openai>=0.1.0,<1.0.0",
]
instructor = [
    "instructor>=0.4.0,<2.0.0",
    "openai>=1.0.0,<3.0.0",
]
guardrails = [
    "guardrails-ai>=0.4.0,<1.0.0",
]
integrations = [
    "fastapi>=0.100.0,<1.0.0",
    "starlette>=0.27.0,<1.0.0",
    "uvicorn>=0.23.0,<1.0.0",
    "langchain-core>=0.1.0,<2.0.0",
    "langchain-openai>=0.1.0,<1.0.0",
    "instructor>=0.4.0,<2.0.0",
    "openai>=1.0.0,<3.0.0",
]
llamaindex = [
    "llama-index-core>=0.10.0,<1.0.0",
]
otel = [
    "opentelemetry-api>=1.20.0,<3.0.0",
    "opentelemetry-sdk>=1.20.0,<3.0.0",
]
local-advisor = [
    "huggingface_hub>=0.20.0,<1.0.0",
]
local-advisor-gpu = [
    "privysha[local-advisor]",
    "nvidia-ml-py>=12.0.0,<13.0.0",
]
all = [
    "openai>=1.0.0,<3.0.0",
    "anthropic>=0.5.0,<1.0.0",
    "google-generativeai>=0.3.0,<1.0.0",
    "transformers>=4.20.0,<5.0.0",
    "torch>=1.12.0,<3.0.0",
    "accelerate>=0.20.0,<2.0.0",
    "spacy>=3.4.0,<4.0.0",
    "fastapi>=0.100.0,<1.0.0",
    "starlette>=0.27.0,<1.0.0",
    "uvicorn>=0.23.0,<1.0.0",
    "langchain-core>=0.1.0,<2.0.0",
    "langchain-openai>=0.1.0,<1.0.0",
    "instructor>=0.4.0,<2.0.0",
    "flask>=2.0.0,<4.0.0",
    "django>=4.0.0,<6.0.0",
    "guardrails-ai>=0.4.0,<1.0.0",
    "opentelemetry-api>=1.20.0,<3.0.0",
    "opentelemetry-sdk>=1.20.0,<3.0.0",
    "llama-index-core>=0.10.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/AjayRajan05/privySHA"
Issues = "https://github.com/AjayRajan05/privySHA/issues"
Changelog = "https://github.com/AjayRajan05/privySHA/blob/main/CHANGELOG.md"

[project.scripts]
privysha = "privysha.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
privysha = ["py.typed"]
"privysha.local_advisor.catalog" = ["fallback.json"]
"*" = ["*.md", "*.txt"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config -m \"not integration\""
testpaths = ["tests", "tests_v2"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (require API keys)"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]